# timepass

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  store.timely
.github/workflows/: ci.yml
docs/: architecture.md  cli.md  sdk.md  security.md
timely-pass-cli/: Cargo.toml  README.md
timely-pass-cli/src/: commands.rs  main.rs  tui.rs
timely-pass-cli/tests/: export_test.rs
timely-pass-sdk/: Cargo.toml  README.md
timely-pass-sdk/src/: crypto.rs  error.rs  eval.rs  lib.rs  policy.rs  store.rs
timely-pass-sdk/tests/: integration_test.rs
