[package]
name = "timely-pass-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tool for managing time-based password policies."
license = "Apache 2.0 and MIT"
repository = "https://github.com/afsall-labs/timely-pass"
keywords = ["security", "password", "policy", "cli", "manager"]
categories = ["command-line-utilities", "authentication"]
readme = "../README.md"

[[bin]]
name = "timely-pass"
path = "src/main.rs"

[dependencies]
timely-pass-sdk = { version = "0.1.0", path = "../timely-pass-sdk" }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
rpassword = "7.4.0"
hex = "0.4.3"
bincode = "1.3"
