[package]
name = "timely-pass-sdk"
version = "0.1.0"
edition = "2021"
description = "A secure, time-based password policy manager SDK."
license = "Apache 2.0 and MIT"
repository = "https://github.com/afsall-labs/timely-pass"
keywords = ["security", "password", "policy", "sdk", "cryptography"]
categories = ["cryptography", "authentication"]
readme = "../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1.7", features = ["derive"] }
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hkdf = "0.12"
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
tempfile = "3.8"

[dev-dependencies]
